--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-absl-py==2.2.2
+absl-py==2.3.0
 asgiref==3.8.1
-concurrent-log-handler==0.9.26
-Django==5.2.1
+concurrent-log-handler==0.9.27
+Django==5.2.2
 dotenv==0.9.9
+gurobipy==12.0.2
 immutabledict==4.2.1
-numpy==2.2.6
-ortools==9.12.4544
-pandas==2.2.3
+numpy==2.3.1
+ortools==9.13.4784
+pandas==2.3.0
 portalocker==3.1.1
 protobuf==6.31.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
-pywin32==310
+pywin32==310 ; sys_platform == "win32"
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.14.0
 tzdata==2025.2
