1. docker postgresql 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ ortools==9.13.4784
 pandas==2.3.0
 portalocker==3.1.1
 protobuf==6.31.1
+psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
