--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,16 @@ services:
       - 8000:8000
     env_file:
       - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:14
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=optdemo_user
+      - POSTGRES_PASSWORD=optdemo_password
+      - POSTGRES_DB=optdemo_dev
+volumes:
+  postgres_data:
+
