--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,15 +10,17 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     depends_on:
       - db
   db:
     image: postgres:14
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - ./.env.prod.db
+    environment:
+      - POSTGRES_USER=optdemo_user
+      - POSTGRES_PASSWORD=optdemo_password
+      - POSTGRES_DB=optdemo_dev
 volumes:
   postgres_data:
 
