--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,23 @@
 version: '3'
 
 services:
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/usr/src/app/static
+    ports:
+      - 80:80
+    depends_on:
+      - web
   web:
     build: .
 #    command: python manage.py runserver 0.0.0.0:8000
     command: gunicorn optdemo_project.wsgi:application --bind 0.0.0.0:8000
     volumes:
+      - static_volume:/usr/src/app/static
       - .:/usr/src/app/
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     env_file:
       - ./.env.prod
     depends_on:
@@ -21,4 +30,5 @@ services:
       - ./.env.prod.db
 volumes:
   postgres_data:
+  static_volume:
 
