--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,41 @@
 absl-py==2.3.0
 asgiref==3.8.1
+cachetools==5.5.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
 concurrent-log-handler==0.9.27
 Django==5.2.2
+django-storages==1.14.6
 dotenv==0.9.9
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-core==2.4.3
+google-cloud-storage==3.1.1
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
 gunicorn==23.0.0
 gurobipy==12.0.2
+idna==3.10
 immutabledict==4.2.1
 numpy==2.3.1
 ortools==9.13.4784
 packaging==25.0
 pandas==2.3.0
 portalocker==3.1.1
+proto-plus==1.26.1
 protobuf==6.31.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 pywin32==310 ; sys_platform == "win32"
+requests==2.32.4
+rsa==4.9.1
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
+urllib3==2.5.0
