1. 개발, 로컬 테스트, 배포 환경 분리 2. matching cf, tft 화면 변경

--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
 SECRET_KEY='django-insecure-5)=z06nprnb$ua_#)c**%n01&+*0%+d33lfqnl1l0n3qolcurx'
 DEBUG=True
-SAVE_DATA_FILE=False
+SAVE_DATA_FILE=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=optdemo_dev
 SQL_USER=optdemo_user
 SQL_PASSWORD=optdemo_password
-SQL_HOST=db
+SQL_HOST=localhost
 SQL_PORT='5432'
 STATIC_URL=/static/
-USE_GCS=False
+USE_GCS=True
