--- a/.env.yaml
+++ b/.env.yaml
@@ -11,3 +11,4 @@ SQL_PORT: "5432"
 USE_GCS: "True"
 GS_BUCKET_NAME: "my-optimization-demo-bucket"
 STATIC_URL: "https://storage.googleapis.com/my-optimization-demo-bucket/"
+USE_GCS_MEDIA: "True"
