--- a/.env.prod
+++ b/.env.prod
@@ -2,6 +2,7 @@ SECRET_KEY='django-insecure-5)=z06nprnb$ua_#)c**%n01&+*0%+d33lfqnl1l0n3qolcurx'
 DEBUG=True
 SAVE_DATA_FILE=False
 ALLOWED_HOSTS=localhost,127.0.0.1
+DATABASE_BACKEND=postgresql
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=optdemo_prod
 SQL_USER=optdemo_prod_user
