1. 기본 최종 완료

--- a/.env.yaml
+++ b/.env.yaml
@@ -2,6 +2,7 @@ DEBUG: "False"
 SECRET_KEY: "_7_g(68#0$d(v@c(%6%@6hqf06%$7@#xw$191lk$4zwhlw_!j+"
 SAVE_DATA_FILE: "False"
 ALLOWED_HOSTS: "optdemo-216727465560.asia-northeast3.run.app"
+DATABASE_BACKEND: "postgresql"
 SQL_ENGINE: django.db.backends.postgresql
 SQL_DATABASE: optdemo_prod
 SQL_USER: optdemo_prod_user
