--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
 SECRET_KEY='django-insecure-5)=z06nprnb$ua_#)c**%n01&+*0%+d33lfqnl1l0n3qolcurx'
 DEBUG=True
 SAVE_DATA_FILE=True
+SAVE_MODEL_FILE=True
 ALLOWED_HOSTS=localhost,127.0.0.1,optdemo
 DATABASE_BACKEND=postgres
 SQL_ENGINE=django.db.backends.postgresql
