--- a/.env.local
+++ b/.env.local
@@ -2,8 +2,9 @@ SECRET_KEY='django-insecure-5)=z06nprnb$ua_#)c**%n01&+*0%+d33lfqnl1l0n3qolcurx'
 DEBUG=True
 SAVE_DATA_FILE=True
 SAVE_MODEL_FILE=True
+SAVE_MODEL_DB=True
 ALLOWED_HOSTS=localhost,127.0.0.1,optdemo
-DATABASE_BACKEND=postgres
+DATABASE_BACKEND=postgresql
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=optdemo_dev
 SQL_USER=optdemo_user
