--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,9 @@
 SECRET_KEY='django-insecure-5)=z06nprnb$ua_#)c**%n01&+*0%+d33lfqnl1l0n3qolcurx'
 DEBUG=True
 SAVE_DATA_FILE=False
+SAVE_MODEL_FILE=False
+SAVE_MODEL_DB=False
+
 ALLOWED_HOSTS=localhost,127.0.0.1,172.20.101.146,optdemo
 DATABASE_BACKEND=postgresql
 SQL_ENGINE=django.db.backends.postgresql
